[package]
name = "rtic-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General dependencies
cortex-m = {version = "0.7.3", features = ["critical-section-single-core"]} # Cortex-M core
stm32f4xx-hal = {version = "0.22.1", features = ["stm32f401", "rtic2", "defmt"]} # HAL for STM32F4xx devices

# knurling-rs dependencies (learn more at https://knurling.ferrous-systems.com/)
defmt = { version = "0.3.9", features = ["encoding-rzcobs"] } # Logging framework
defmt-rtt = {version = "0.4.1" } # Enables logging over RTT
panic-probe = { version = "0.3.2", features = ["print-defmt"] } # Panic handler using probe-rs / defmt

# Real-Time dependencies & tools
rtic = { version = "2.1.1", features = ["thumbv7-backend"] } # RTIC framework for concurrency
rtic-monotonics = {version = "2.0.3", features = ["cortex-m-systick", "systick-64bit", "stm32f446re"] }  # Monotonic timer for RTIC
fugit = {version = "0.3.7", features = ["defmt"] } # Duration and time handling


############################################
# Optional dependencies to consider adding #
############################################

# Heapless is a collection of data structures that don't require dynamic memory allocation
# E.g. `heapless::Vec<u8, 32>` is a vector with a maximum capacity of 32 u8 elements
heapless = "0.8.0"

# Panic handler if you're using a different debugger
# panic-halt = "0.2.0"

# CAN support for STM32F4xx devices (requires the 'can' feature in stm32f4xx-hal)
# The unstable-defmt feature derives defmt Format traits for the CAN types
# bxcan = { version = "0.7", features = ["unstable-defmt"] }

# For unit testing with defmt
# [dev-dependencies]
# defmt-test = "0.3.1"

